--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="modal-body">
                 <div class="form-group">
                     <label for="event-title">Activity</label>
-                    <input type="text" id="event-title" autocapitalize="words" placeholder="e.g. Morning Jog">
+                    <input type="text" id="event-title" autocapitalize="words">
                 </div>
 
                 <!-- Day selection hidden/removed for Daily Routine -->
